FP-877: Onb. Admin UI: Pill Truncation Fix 2
Ensure vert. alignment of pill is not changed (by `overflow: hidden`).

--- a/client/src/components/Onboarding/OnboardingAdmin.module.scss
+++ b/client/src/components/Onboarding/OnboardingAdmin.module.scss
@@ -98,7 +98,7 @@ tbody {
 /* HACK: This selector has knowledge of sibling component's internal markup */
 /* FAQ: Because we cannot pass `className`to <Pill> via <OnboardingStatus> */
 /* FAQ: Because <OnboardingStatus> has a superfluous root element */
-/* i.e. <OnboardingStatus>'s <Pill> */ .status-text > * {
+.status-text > * /* i.e. <OnboardingStatus>'s <Pill> */ {
   white-space: nowrap;
 }
 
