FP-877: Onb. Admin UI: Nested Table Layout Fix 2
Size "Admin[…] Actions" columns in a way that actually takes effect.

--- a/client/src/components/Onboarding/OnboardingAdmin.module.scss
+++ b/client/src/components/Onboarding/OnboardingAdmin.module.scss
@@ -175,12 +175,12 @@ tbody {
 .steps {
   table-layout: fixed;
 
-  th:nth-child(1) { width: 17%; }
-  th:nth-child(2) { width: 30%; }
+  col:nth-child(1) { width: 17%; }
+  col:nth-child(2) { width: 30%; }
   th:nth-child(3) { width: 36%; }
-  td:nth-child(3) { width: 17%; }
-  td:nth-child(4) { width: 19%; }
-  th:nth-child(5) { width: 17%; }
+    col:nth-child(3) { width: 19%; }
+    col:nth-child(4) { width: 17%; }
+  col:nth-child(5) { width: 17%; }
 }
 
 .no-users-placeholder {
