FP-877: Onb. Admin UI: Single Table Layout Fix 1
Simplify styles and classes for wrapping and vertical align.

--- a/client/src/components/Onboarding/OnboardingAdmin.module.scss
+++ b/client/src/components/Onboarding/OnboardingAdmin.module.scss
@@ -92,7 +92,7 @@ tbody {
   /* FAQ: We want only the top space, not the top & bottom space combined */
   --vertical-offset: calc(var(--greatest-height-diff) / 2);
 }
-.step > td:not(.status):not(.actions) {
+.step > td:not(.has-wrappable-content) {
   /* Tweak `vertical-align`'s `top` to look like `middle` when nothing wraps */
   padding-top: calc(var(--cell-horizontal-padding) + var(--vertical-offset));
   vertical-align: top;
