FP-972: Unsqueeze onboarding status loading icon

--- a/client/src/components/Onboarding/OnboardingStatus.module.scss
+++ b/client/src/components/Onboarding/OnboardingStatus.module.scss
@@ -3,9 +3,8 @@
   margin-right: 0.5em;
 }
 
-.loading-icon {
-  display: inherit;
-  width: inherit;
+.loading {
+  width: auto;
 }
 
 .processing {
