--- a/client/src/components/DataFiles/DataFilesModals/DataFilesUploadModal.module.scss
+++ b/client/src/components/DataFiles/DataFilesModals/DataFilesUploadModal.module.scss
@@ -5,16 +5,12 @@
   flex-direction: column;
 }
 
-
-
 /* Elements */
 
 .listing-header {
   margin-top: 10px;
   font-size: 20px;
 }
-
-
 
 /* Modifiers */
 
@@ -34,4 +30,9 @@
   div {
     max-height: 80px;
   }
+}
+
+div[disabled] {
+  pointer-events: none;
+  opacity: 0.7;
 }
