GH-193: Use blocks and `hasPortal` var in header

--- a/server/portal/templates/base.html
+++ b/server/portal/templates/base.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <div class="content">
-      {% include 'includes/header.html' %}
+      {% include 'includes/header.html' hasPortal=True %}
       {% include 'includes/messages.html' %}
       {% block breadcrumb %}{% endblock %}
       {% block content %}{% endblock %}
