FP-385: Restore style that caused bug when deleted

--- a/client/src/components/Allocations/Allocations.scss
+++ b/client/src/components/Allocations/Allocations.scss
@@ -18,6 +18,9 @@
 /*
     Components
 */
+.allocations-content a {
+    padding-left: 0;
+}
 /* !!!: Temporary commented outdated selector to make simpler PR diff */
 /* #allocations-header, */
 .allocations-header {
