FP-385: If Data Files is too short allow scroll
The previous commit avoids this, but that code could be removed.
I am solving scrolling bugs not jsut layout bugs—independent solutions.

--- a/client/src/components/DataFiles/DataFilesTable/DataFilesTable.scss
+++ b/client/src/components/DataFiles/DataFilesTable/DataFilesTable.scss
@@ -40,4 +40,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
+
+  overflow-y: auto; /* to allow content to scroll when window height is short */
 }
