--- a/server/portal/templates/includes/nav_portal.html
+++ b/server/portal/templates/includes/nav_portal.html
@@ -18,7 +18,7 @@
         </a>
         {% if user.is_staff %}
         <a class="dropdown-item" href="{% url 'workbench:onboardingadmin' %}">
-          <i class="fas fa-desktop nav-icon"></i> Onboarding Admin
+          <i class="fas fa-tasks nav-icon"></i> Onboarding Admin
         </a>
         {% endif %}
         <a class="dropdown-item" href="{% url 'portal_accounts:manage_profile' %}">
